Data is not evaluated for grease pencil VFX in render animation but works in viewport #57484

Closed
opened 2018-10-29 10:22:15 +01:00 by Antonio Vazquez · 11 comments

If you add a VFX and animate any property or add any depsgraph related object (for example the location of one object to manage VFX), the data is evaluated in viewport, but when render the data is not evaluated.

To reproduce:

  1. Open attached file
  2. Move timeline current frame. The VFX works.
  3. Render one frame (F12)->works
  4. Render animation. (Ctrl+F12)->All frames are equal.

DEPSGRAP_FX.blend

If you add a VFX and animate any property or add any depsgraph related object (for example the location of one object to manage VFX), the data is evaluated in viewport, but when render the data is not evaluated. To reproduce: 1) Open attached file 2) Move timeline current frame. The VFX works. 3) Render one frame (F12)->works 4) Render animation. (Ctrl+F12)->All frames are equal. [DEPSGRAP_FX.blend](https://archive.blender.org/developer/F5281495/DEPSGRAP_FX.blend)
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov

#58285 was marked as duplicate of this issue

#58285 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-10-29 11:06:38 +01:00
Member

Confirmed, will have a look.

Confirmed, will have a look.
Philipp Oeser removed their assignment 2018-10-30 16:42:11 +01:00
Sergey Sharybin was assigned by Philipp Oeser 2018-10-30 16:42:11 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Well, did some reading, but no solution within time constraints...
Getting this:
add_node_handle_relation(Swirl ShaderFx) - Could not find op_from (ComponentKey(OBEmpty, 8, ''))

Would kindly ask @Sergey to take over...

Well, did some reading, but no solution within time constraints... Getting this: `add_node_handle_relation(Swirl ShaderFx) - Could not find op_from (ComponentKey(OBEmpty, 8, ''))` Would kindly ask @Sergey to take over...
Author
Member

@lichtwerk I get this console warning sometimes in modifiers and vfx that use an object (wave, light, etc..) no idea why and when the warning is produced.

@lichtwerk I get this console warning sometimes in modifiers and vfx that use an object (wave, light, etc..) no idea why and when the warning is produced.
Member

Added subscriber: @BerbankGreen

Added subscriber: @BerbankGreen
Sergey Sharybin removed their assignment 2019-01-29 15:46:46 +01:00
Antonio Vazquez was assigned by Sergey Sharybin 2019-01-29 15:46:46 +01:00

I've committed 33dcf9fa which solves some of the aspects of this bug. The rest goes deeper in roots of grease pencil design, which violates the render/viewport data separation

@antoniov, you should never go from evaluated to original object when rendering (aka in draw manager). The only case when it's OK is when object is in edit or sculpt/paint mode (where some data is still local, but the paint session is shared). Without following this rule you'll never have reliable and stable animation playing.

If you remove all DEG_get_original_id from draw manager this bug will be solved.

For the performance of drawing follow similar way as sculpting/particle edit mode: allow sharing data between evaluated and original object when in paint mode. Fort all the rest keep clear separation, and never change the "domain" (original <-> evaluated).

I've committed 33dcf9fa which solves some of the aspects of this bug. The rest goes deeper in roots of grease pencil design, which violates the render/viewport data separation @antoniov, you should never go from evaluated to original object when rendering (aka in draw manager). The only case when it's OK is when object is in edit or sculpt/paint mode (where some data is still local, but the paint session is shared). Without following this rule you'll never have reliable and stable animation playing. If you remove all `DEG_get_original_id` from draw manager this bug will be solved. For the performance of drawing follow similar way as sculpting/particle edit mode: allow sharing data between evaluated and original object when in paint mode. Fort all the rest keep clear separation, and never change the "domain" (original <-> evaluated).
Author
Member

@Sergey I have done the change (remove any <DEG_get_original_id>) in greasepencil object branch to test the draw manager. If all works fine, I will move the change to master.

I only keep this in drawing because use the evaluated takes a lot of time (I had to change this some time ago due performance problems), but it's only in a logic place.

@Sergey I have done the change (remove any <DEG_get_original_id>) in greasepencil object branch to test the draw manager. If all works fine, I will move the change to master. I only keep this in drawing because use the evaluated takes a lot of time (I had to change this some time ago due performance problems), but it's only in a logic place.
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57484
No description provided.